# subtitle-parser

./: .gitignore  CMakeLists.txt  SubAssParser.cpp  SubAssParser.h  SubtitleParser.cpp  SubtitleParser.sln  SubtitleParser.vcxproj  SubtitleParser.vcxproj.filters  SubtitleParserFactory.cpp  SubtitleParserFactory.h  main.cpp
SubtitleParser/: SubtitleParser.sln
SubtitleParser/SubtitleParser/: SubtitleParser.vcxproj  SubtitleParser.vcxproj.filters  main.cpp
libass/: ass.c  ass.h  ass_bitmap.c  ass_bitmap.h  ass_cache.c  ass_cache.h  ass_font.h  ass_fontselect.h  ass_outline.h  ass_parse.c  ass_render.c  ass_render.h  ass_render_api.c  ass_shaper.c  ass_shaper.h  ass_utils.h
test/: Batman.Begins.2005.BluRay.1080p.DTS.2Audio.x2264-CHD.ass  batman.srt
